SERVER-42772 Return transaction commit decision from onCompletion future in TransactionCoordinator