src/mongo/db/s/transaction_coordinator_service.cpp
@@ -88,11 +88,11 @@ void TransactionCoordinatorService::createCoordinator(OperationContext* opCtx,
                                                             commitDeadline));
 }
 
-boost::optional<Future<txn::CommitDecision>> TransactionCoordinatorService::coordinateCommit(
-    OperationContext* opCtx,
-    LogicalSessionId lsid,
-    TxnNumber txnNumber,
-    const std::set<ShardId>& participantList) {
+boost::optional<SharedSemiFuture<txn::CommitDecision>>
+TransactionCoordinatorService::coordinateCommit(OperationContext* opCtx,
+                                                LogicalSessionId lsid,
+                                                TxnNumber txnNumber,
+                                                const std::set<ShardId>& participantList) {
     auto cas = _getCatalogAndScheduler(opCtx);
     auto& catalog = cas->catalog;
 
@@ -103,8 +103,7 @@ boost::optional<Future<txn::CommitDecision>> TransactionCoordinatorService::coor
 
     coordinator->runCommit(std::vector<ShardId>{participantList.begin(), participantList.end()});
 
-    return coordinator->onCompletion().then(
-        [coordinator] { return coordinator->getDecision().get(); });
+    return coordinator->onCompletion();
 
     // TODO (SERVER-37364): Re-enable the coordinator returning the decision as soon as the decision
     // is made durable. Currently the coordinator waits to hear acks because participants in prepare
@@ -112,7 +111,7 @@ boost::optional<Future<txn::CommitDecision>> TransactionCoordinatorService::coor
     // return coordinator->getDecision();
 }
 
-boost::optional<Future<txn::CommitDecision>> TransactionCoordinatorService::recoverCommit(
+boost::optional<SharedSemiFuture<txn::CommitDecision>> TransactionCoordinatorService::recoverCommit(
     OperationContext* opCtx, LogicalSessionId lsid, TxnNumber txnNumber) {
     auto cas = _getCatalogAndScheduler(opCtx);
     auto& catalog = cas->catalog;
@@ -126,8 +125,7 @@ boost::optional<Future<txn::CommitDecision>> TransactionCoordinatorService::reco
     // the coordinator.
     coordinator->cancelIfCommitNotYetStarted();
 
-    return coordinator->onCompletion().then(
-        [coordinator] { return coordinator->getDecision().get(); });
+    return coordinator->onCompletion();
 
     // TODO (SERVER-37364): Re-enable the coordinator returning the decision as soon as the decision
     // is made durable. Currently the coordinator waits to hear acks because participants in prepare
