src/mongo/db/s/transaction_coordinator_service.h
@@ -65,7 +65,7 @@ public:
      *
      * If no coordinator for the (lsid, txnNumber) exists, returns boost::none.
      */
-    boost::optional<Future<txn::CommitDecision>> coordinateCommit(
+    boost::optional<SharedSemiFuture<txn::CommitDecision>> coordinateCommit(
         OperationContext* opCtx,
         LogicalSessionId lsid,
         TxnNumber txnNumber,
@@ -77,9 +77,9 @@ public:
      *
      * If no coordinator for the (lsid, txnNumber) exists, returns boost::none.
      */
-    boost::optional<Future<txn::CommitDecision>> recoverCommit(OperationContext* opCtx,
-                                                               LogicalSessionId lsid,
-                                                               TxnNumber txnNumber);
+    boost::optional<SharedSemiFuture<txn::CommitDecision>> recoverCommit(OperationContext* opCtx,
+                                                                         LogicalSessionId lsid,
+                                                                         TxnNumber txnNumber);
 
     /**
      * Marks the coordinator catalog as stepping up, which blocks all incoming requests for
