src/mongo/db/s/transaction_coordinator_test.cpp
@@ -956,8 +956,9 @@ TEST_F(TransactionCoordinatorTest,
 
     ASSERT_THROWS_CODE(
         commitDecisionFuture.get(), AssertionException, ErrorCodes::ReadConcernMajorityNotEnabled);
-
-    coordinator.onCompletion().get();
+    ASSERT_THROWS_CODE(coordinator.onCompletion().get(),
+                       AssertionException,
+                       ErrorCodes::ReadConcernMajorityNotEnabled);
 }
 
 
@@ -1641,7 +1642,8 @@ TEST_F(TransactionCoordinatorMetricsTest, CoordinatorIsCanceledWhileInactive) {
     expectedStats.totalDuration = *expectedStats.totalDuration + Microseconds(100);
 
     coordinator.cancelIfCommitNotYetStarted();
-    coordinator.onCompletion().get();
+    ASSERT_THROWS_CODE(
+        coordinator.onCompletion().get(), DBException, ErrorCodes::NoSuchTransaction);
 
     checkStats(stats, expectedStats);
     checkMetrics(expectedMetrics);
@@ -1683,7 +1685,8 @@ TEST_F(TransactionCoordinatorMetricsTest, CoordinatorsAWSIsShutDownWhileCoordina
     expectedStats.totalDuration = *expectedStats.totalDuration + Microseconds(100);
 
     awsPtr->shutdown({ErrorCodes::TransactionCoordinatorSteppingDown, "dummy"});
-    coordinator.onCompletion().get();
+    ASSERT_THROWS_CODE(
+        coordinator.onCompletion().get(), DBException, ErrorCodes::InterruptedDueToReplStateChange);
 
     checkStats(stats, expectedStats);
     checkMetrics(expectedMetrics);
@@ -1743,7 +1746,8 @@ TEST_F(TransactionCoordinatorMetricsTest,
     expectedMetrics.currentWritingParticipantList--;
 
     killClientOpCtx(getServiceContext(), "hangBeforeWaitingForParticipantListWriteConcern");
-    coordinator.onCompletion().get();
+    ASSERT_THROWS_CODE(
+        coordinator.onCompletion().get(), DBException, ErrorCodes::InterruptedAtShutdown);
 
     checkStats(stats, expectedStats);
     checkMetrics(expectedMetrics);
@@ -1806,7 +1810,9 @@ TEST_F(TransactionCoordinatorMetricsTest,
     network()->enterNetwork();
     network()->runReadyNetworkOperations();
     network()->exitNetwork();
-    coordinator.onCompletion().get();
+
+    ASSERT_THROWS_CODE(
+        coordinator.onCompletion().get(), DBException, ErrorCodes::InterruptedDueToReplStateChange);
 
     checkStats(stats, expectedStats);
     checkMetrics(expectedMetrics);
@@ -1871,7 +1877,9 @@ TEST_F(TransactionCoordinatorMetricsTest,
     expectedMetrics.currentWritingDecision--;
 
     killClientOpCtx(getServiceContext(), "hangBeforeWaitingForDecisionWriteConcern");
-    coordinator.onCompletion().get();
+    ASSERT_THROWS_CODE(
+        coordinator.onCompletion().get(), DBException, ErrorCodes::InterruptedAtShutdown);
+
 
     checkStats(stats, expectedStats);
     checkMetrics(expectedMetrics);
